--- a/style/index.css
+++ b/style/index.css
@@ -4,13 +4,17 @@ body {
 .navbar {
     display: flex;
     padding: 5px 12px;
+    margin-bottom: 10px;
     align-items: center;
+    background-color: wheat;
+    border-radius: 20px;
+    font-size: 20px;
 }
 
 .nav-logo a {
     text-decoration: none;
     color: #000000;
-    font-size: 24px;
+    font-size: 30px;
     font-weight: bold;
 }
 
@@ -31,6 +35,11 @@ body {
     padding: 8px;
 }
 
+.nav-links a:hover {
+    background: whitesmoke;
+    color: wheat;
+}
+
 .nav-logout {
     flex: 1;
     text-align: right;
@@ -48,10 +57,14 @@ body {
     padding: 8px;
 }
 
+.nav-logout a:hover {
+    background: whitesmoke;
+    color: wheat;
+}
+
 .hero img {
     width: 100%;
-    height: 550px;
-    background: wheat;
+    height: 450px;
     border-radius: 20px;
 }
 
